WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131574
Lots of compositing test failures after
r167152
https://bugs.webkit.org/show_bug.cgi?id=131574
Summary
Lots of compositing test failures after r167152
Tim Horton
Reported
2014-04-11 16:57:28 PDT
Because of the extra empty layer in the tree.
Attachments
as-yet untested patch
(2.34 KB, patch)
2014-04-11 16:58 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
patch
(1.57 KB, patch)
2014-04-11 17:27 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
patch
(3.16 KB, patch)
2014-04-11 17:49 PDT
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
part 2
(2.90 KB, patch)
2014-04-14 00:42 PDT
,
Tim Horton
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2014-04-11 16:58:57 PDT
Created
attachment 229181
[details]
as-yet untested patch waiting on a build at the moment
Tim Horton
Comment 2
2014-04-11 17:27:35 PDT
Created
attachment 229184
[details]
patch
Tim Horton
Comment 3
2014-04-11 17:49:06 PDT
Created
attachment 229188
[details]
patch
Tim Horton
Comment 4
2014-04-11 18:26:18 PDT
http://trac.webkit.org/changeset/167177
Benjamin Poulain
Comment 5
2014-04-13 20:54:33 PDT
The tree is still red, can you please have a look?
Tim Horton
Comment 6
2014-04-13 23:25:27 PDT
Wat, fixed the majority but there's one left? That is bizarre... I will look right away.
Tim Horton
Comment 7
2014-04-14 00:13:18 PDT
Reopening to fix the one remaining failure.
Tim Horton
Comment 8
2014-04-14 00:24:57 PDT
If we have a layer, skip one of its children, then want its grandchildren listed in its children's place, we won't correctly skip any grandchildren that want skipping. This mechanism (my fault in the first place, from many months ago) is a bit flawed. Will fix.
Tim Horton
Comment 9
2014-04-14 00:42:33 PDT
Created
attachment 229268
[details]
part 2
Darin Adler
Comment 10
2014-04-14 08:36:22 PDT
Comment on
attachment 229268
[details]
part 2 View in context:
https://bugs.webkit.org/attachment.cgi?id=229268&action=review
> Source/WebCore/platform/graphics/GraphicsLayer.cpp:596 > + for (size_t childIndex = 0; childIndex < children.size(); childIndex++) { > + GraphicsLayer* child = children[childIndex];
This should use a C++11 for loop: for (auto* child : children) {
Tim Horton
Comment 11
2014-04-14 08:43:10 PDT
http://trac.webkit.org/changeset/167246
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug