Lots of compositing test failures after r167152 https://bugs.webkit.org/show_bug.cgi?id=131574

Reviewed by Simon Fraser.

* WebProcess/WebPage/PageOverlayController.h:
Skip page overlay layers in layer tree dumps, for consistency between platforms.

* platform/graphics/GraphicsLayer.cpp:
(WebCore::GraphicsLayer::dumpProperties):
We were asking the parent's client whether the child should be dumped,
but really the child's client is the one who should decide.


Canonical link: https://commits.webkit.org/149645@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167177 268f45cc-cd09-0410-ab3c-d52691b4dbfc